<resources>
    <string name="app_name">Storj-HostStats</string>

    <!-- MainActivity-->
    <string name="address">Address: %1$s</string>
    <string name="userAgent">UserAgent: %1$s</string>
    <string name="userAgent_outdated">UserAgent: %1$s (Outdated Version)</string>
    <string name="onlineSince">Online since: %1$s</string>
    <string name="edit_node">Edit Node</string>

    <!-- Add/edit Node popup -->
    <string name="add_node_popup_title">Add New Node</string>
    <string name="edit_simpleName">StorjNode1</string>
    <string name="edit_NodeID">3bb0db2373aac96501e807778759cf207b75c05e</string>
    <string name="add_error_missing_nodeID">You forgot to enter a NodeID</string>
    <string name="add_error_missing_SimpleName">Please enter a name for your node</string>
    <string name="add_error_node_exists">This NodeID is already used</string>
    <string name="add_error_wrong_character_count">NodeID wrong character count</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>

    <!-- Notification -->
    <string name="node_is_offline">%1$s is offline</string>
    <string name="new_useragent_version">A new Storj-Core Version got released</string>
    <string name="new_useragent_version_details">Expect a new storjshare-daemon version in the next days</string>

    <!-- Settings -->
    <string name="menu_settings">Settings</string>
    <string name="menu_sort">Sort</string>
    <string name="menu_refresh">Refresh</string>
    <string name="menu_help">Help</string>
    <string name="pref_general">General</string>
    <string name="pref_enable_notifications">Notifications</string>
    <string name="pref_enable_notifications_summary">Enable to receive notifications about your Storj-Nodes</string>
    <string name="pref_storj_dash_integration">StorjDash Integration</string>
    <string name="pref_storj_dash_integration_enabled">Enabled</string>
    <string name="pref_storj_dash_integration_api_key">API-key</string>
    <string name="pref_storj_dash_integration_api_key_default">Please enter your API-Key</string>

    <!-- AlarmReceiver -->
    <string name="no_connection">No internet connection</string>

    <!-- StorjNode details Activity -->
    <string name="details_SimpleName">%1$s</string>
    <string name="details_online">Online</string>
    <string name="details_offline">Offline</string>
    <string name="details_NodeID">NodeID: </string>
    <string name="details_Address">Address: </string>
    <string name="details_LastSeen">Last Seen: </string>
    <string name="details_UserAgent">UserAgent: </string>
    <string name="details_Protocol">Protocol: </string>
    <string name="details_LastTimeout">Last Timeout: </string>
    <string name="details_TimeoutRate">Timeout Rate: </string>
    <string name="details_TimeoutRate_too_hight"> (too high)</string>
    <string name="details_LastContractSent">Last Contract Sent: </string>
    <string name="details_Reputation">Reputation: </string>
    <string name="details_Error">Unable to find node: %1$s</string>
    <string name="details_No_Timeout">No Timeout so far</string>
    <string name="details_SpaceAvailable">Space available: </string>
    <string name="details_OnlineSince">Online since: </string>
    <string name="details_LastContractSentUpdated">Last Contract Sent last update: </string>

    <string name="unknown">unknown</string>
    <string name="details_OnlineSince_offline">Node is offline</string>

    <string name="btn_responseTime">Response time [ms]</string>
    <string name="btn_reputation">Reputation</string>
    <string name="btn_stored_bytes">Shared [GB]</string>
</resources>
