<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/pref_general">
        <SwitchPreference
            android:key="pref_enable_notifications"
            android:title="@string/pref_enable_notifications"
            android:summary="@string/pref_enable_notifications_summary"
            android:defaultValue="true" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_storj_dash_integration">

    </PreferenceCategory>
    <SwitchPreference
        android:defaultValue="false"
        android:key="storj_dash_integration_enabled"
        android:title="@string/pref_storj_dash_integration_enabled" />
    <EditTextPreference
        android:defaultValue="@string/pref_storj_dash_integration_api_key_default"
        android:key="api_key_edit_text"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:enabled="false"
        android:title="@string/pref_storj_dash_integration_api_key" />
</PreferenceScreen>